5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1836_1275.log
== TEST (2019-07-01 20:04:25) 
-- CODE:
from numpy import*
from linalg import*
v = array([
	[2,4,3,4,5,8,8],
   [7,3,4,3,3,4,4],
   [3,3,4,3,3,2,2],
   [9,3,4,7,3,4,1]])
m = zero((1,4), dtype=int)
total = 0
for i in range(v):
	for j in range(v):
		total = total + v[0, j]
		m[i, j] = total
	print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:04:39) 
-- CODE:
from numpy import*
from linalug import*
v = array([
	[2,4,3,4,5,8,8],
   [7,3,4,3,3,4,4],
   [3,3,4,3,3,2,2],
   [9,3,4,7,3,4,1]])
m = zero((1,4), dtype=int)
total = 0
for i in range(v):
	for j in range(v):
		total = total + v[0, j]
		m[i, j] = total
	print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:05:42) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array([
	[2,4,3,4,5,8,8],
   [7,3,4,3,3,4,4],
   [3,3,4,3,3,2,2],
   [9,3,4,7,3,4,1]])
m = zero((1,4), dtype=int)
total = 0
for i in range(v):
	for j in range(v):
		total = total + v[0, j]
		m[i, j] = total
	print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:05:49) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array([
	[2,4,3,4,5,8,8],
   [7,3,4,3,3,4,4],
   [3,3,4,3,3,2,2],
   [9,3,4,7,3,4,1]])
m = zeros((1,4), dtype=int)
total = 0
for i in range(v):
	for j in range(v):
		total = total + v[0, j]
		m[i, j] = total
	print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:08:23) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array([
	[2,4,3,4,5,8,8],
   [7,3,4,3,3,4,4],
   [3,3,4,3,3,2,2],
   [9,3,4,7,3,4,1]])
m = zeros((1,4), dtype=int)
total = 0
for j in range(v):
	total = total + v[0, j]
	m[i, j] = total
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:10:26) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array([
	[2,4,3,4,5,8,8],
   [7,3,4,3,3,4,4],
   [3,3,4,3,3,2,2],
   [9,3,4,7,3,4,1]])
m = zeros((1,4), dtype=int)
total = 0
s = shape(v)[1]
for j in range(s):
	total = total + v[0, j]
	m[i, j] = total
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:10:37) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array([
	[2,4,3,4,5,8,8],
   [7,3,4,3,3,4,4],
   [3,3,4,3,3,2,2],
   [9,3,4,7,3,4,1]])
m = zeros((1,4), dtype=int)
total = 0
s = shape(v)[1]
for j in range(s):
	total = total + v[0, j]
	m[0, j] = total
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:27:51) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array([
	[2,4,3,4,5,8,8],
   [7,3,4,3,3,4,4],
   [3,3,4,3,3,2,2],
   [9,3,4,7,3,4,1]])
m = zeros(shape(v)[0], dtype=int)

for i in range(shape(v)[0]):
	m[i] = sum(v[i,:])
print(m)
-- EXECUTION TIME:
1.01169
-- TEST CASE 1:
---- input:
[[8,9,0,2,7,0,9],[6,1,9,10,10,5,0],[7,4,8,5,5,1,1],[4,5,6,10,4,5,5],[9,2,4,4,5,1,9],[0,1,4,9,5,8,8],[10,2,6,4,6,8,7],[2,10,7,2,10,7,5],[4,7,2,9,1,1,5],[0,5,6,2,3,7,4],[10,1,6,10,4,9,6],[7,10,6,1,2,2,4],[7,3,4,7,5,6,1],[0,2,3,10,1,6,10],[7,8,0,10,7,3,5],[2,3,2,3,0,3,6]]
---- correct output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
---- user output:
[34 28 20 31]
-- TEST CASE 2:
---- input:
[[3,9,2,0,7,2,3],[0,5,3,6,2,9,7],[9,3,5,10,7,0,8],[7,5,8,1,7,1,9],[5,4,4,5,0,8,6],[4,6,8,4,0,2,8],[9,9,4,10,3,2,2],[6,4,1,9,8,5,1],[8,0,3,1,9,8,1],[3,7,9,5,5,1,0],[2,1,0,5,7,7,3],[0,6,2,4,0,0,1],[3,8,5,1,9,2,10],[7,1,2,0,9,10,7],[8,2,10,7,5,1,10],[9,10,1,3,0,5,5],[0,10,3,7,3,9,8],[1,8,4,0,8,1,5],[0,7,2,3,1,6,8],[0,1,6,1,9,4,10],[1,1,4,0,1,5,6]]
---- correct output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
---- user output:
[34 28 20 31]
-- TEST CASE 3:
---- input:
[[0,3,1,8,4,1,3],[3,6,0,4,4,9,7],[10,10,1,8,1,2,3],[3,2,5,2,7,0,2],[0,5,6,9,3,6,3],[8,2,9,8,7,9,4],[10,10,5,1,5,2,4],[7,1,8,4,8,7,0],[9,6,4,2,6,4,9],[5,1,6,10,4,6,4],[9,10,2,2,3,5,1],[6,5,9,3,5,7,5],[9,8,1,7,7,6,2],[2,7,5,8,8,5,5],[8,2,1,2,9,7,6],[1,2,9,5,8,3,10],[2,2,0,4,6,1,6],[6,7,4,1,5,3,2],[3,7,1,2,6,8,10],[0,2,5,3,7,1,6],[8,1,3,9,2,0,1],[4,8,3,5,10,8,8],[7,5,7,9,1,7,2],[2,9,8,4,2,0,8],[2,6,9,7,4,0,9],[3,9,0,4,1,1,0],[6,7,6,5,6,7,1]]
---- correct output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33 37
 18 38]
---- user output:
[34 28 20 31]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:28:04) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array([
	[2,4,3,4,5,8,8],
   [7,3,4,3,3,4,4],
   [3,3,4,3,3,2,2],
   [9,3,4,7,3,4,1]])
m = zeros(shape(v)[0], dtype=int)

for i in range(shape(v)[0]):
	m[i] = sum(v[i:])
print(m)
-- EXECUTION TIME:
0.885662
-- TEST CASE 1:
---- input:
[[8,9,0,2,7,0,9],[6,1,9,10,10,5,0],[7,4,8,5,5,1,1],[4,5,6,10,4,5,5],[9,2,4,4,5,1,9],[0,1,4,9,5,8,8],[10,2,6,4,6,8,7],[2,10,7,2,10,7,5],[4,7,2,9,1,1,5],[0,5,6,2,3,7,4],[10,1,6,10,4,9,6],[7,10,6,1,2,2,4],[7,3,4,7,5,6,1],[0,2,3,10,1,6,10],[7,8,0,10,7,3,5],[2,3,2,3,0,3,6]]
---- correct output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
---- user output:
[113  79  51  31]
-- TEST CASE 2:
---- input:
[[3,9,2,0,7,2,3],[0,5,3,6,2,9,7],[9,3,5,10,7,0,8],[7,5,8,1,7,1,9],[5,4,4,5,0,8,6],[4,6,8,4,0,2,8],[9,9,4,10,3,2,2],[6,4,1,9,8,5,1],[8,0,3,1,9,8,1],[3,7,9,5,5,1,0],[2,1,0,5,7,7,3],[0,6,2,4,0,0,1],[3,8,5,1,9,2,10],[7,1,2,0,9,10,7],[8,2,10,7,5,1,10],[9,10,1,3,0,5,5],[0,10,3,7,3,9,8],[1,8,4,0,8,1,5],[0,7,2,3,1,6,8],[0,1,6,1,9,4,10],[1,1,4,0,1,5,6]]
---- correct output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
---- user output:
[113  79  51  31]
-- TEST CASE 3:
---- input:
[[0,3,1,8,4,1,3],[3,6,0,4,4,9,7],[10,10,1,8,1,2,3],[3,2,5,2,7,0,2],[0,5,6,9,3,6,3],[8,2,9,8,7,9,4],[10,10,5,1,5,2,4],[7,1,8,4,8,7,0],[9,6,4,2,6,4,9],[5,1,6,10,4,6,4],[9,10,2,2,3,5,1],[6,5,9,3,5,7,5],[9,8,1,7,7,6,2],[2,7,5,8,8,5,5],[8,2,1,2,9,7,6],[1,2,9,5,8,3,10],[2,2,0,4,6,1,6],[6,7,4,1,5,3,2],[3,7,1,2,6,8,10],[0,2,5,3,7,1,6],[8,1,3,9,2,0,1],[4,8,3,5,10,8,8],[7,5,7,9,1,7,2],[2,9,8,4,2,0,8],[2,6,9,7,4,0,9],[3,9,0,4,1,1,0],[6,7,6,5,6,7,1]]
---- correct output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33 37
 18 38]
---- user output:
[113  79  51  31]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:28:12) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array([
	[2,4,3,4,5,8,8],
   [7,3,4,3,3,4,4],
   [3,3,4,3,3,2,2],
   [9,3,4,7,3,4,1]])
m = zeros(shape(v)[0], dtype=int)

for i in range(shape(v)[0]):
	m[i] = sum(v[i:])
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:28:38) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array([
	[2,4,3,4,5,8,8],
   [7,3,4,3,3,4,4],
   [3,3,4,3,3,2,2],
   [9,3,4,7,3,4,1]])
m = zeros(shape(v)[0], dtype=int)

for i in range(shape(v)[0]):
	m[i] = sum(v[i,:])
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:28:47) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array([
	[2,4,3,4,5,8,8],
   [7,3,4,3,3,4,4],
   [3,3,4,3,3,2,2],
   [9,3,4,7,3,4,1]])
m = zeros(shape(v)[0], dtype=int)

for i in range(shape(v)[0]):
	m[i] = sum(v[i,:])
print(m)
-- EXECUTION TIME:
1.12697
-- TEST CASE 1:
---- input:
[[8,9,0,2,7,0,9],[6,1,9,10,10,5,0],[7,4,8,5,5,1,1],[4,5,6,10,4,5,5],[9,2,4,4,5,1,9],[0,1,4,9,5,8,8],[10,2,6,4,6,8,7],[2,10,7,2,10,7,5],[4,7,2,9,1,1,5],[0,5,6,2,3,7,4],[10,1,6,10,4,9,6],[7,10,6,1,2,2,4],[7,3,4,7,5,6,1],[0,2,3,10,1,6,10],[7,8,0,10,7,3,5],[2,3,2,3,0,3,6]]
---- correct output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
---- user output:
[34 28 20 31]
-- TEST CASE 2:
---- input:
[[3,9,2,0,7,2,3],[0,5,3,6,2,9,7],[9,3,5,10,7,0,8],[7,5,8,1,7,1,9],[5,4,4,5,0,8,6],[4,6,8,4,0,2,8],[9,9,4,10,3,2,2],[6,4,1,9,8,5,1],[8,0,3,1,9,8,1],[3,7,9,5,5,1,0],[2,1,0,5,7,7,3],[0,6,2,4,0,0,1],[3,8,5,1,9,2,10],[7,1,2,0,9,10,7],[8,2,10,7,5,1,10],[9,10,1,3,0,5,5],[0,10,3,7,3,9,8],[1,8,4,0,8,1,5],[0,7,2,3,1,6,8],[0,1,6,1,9,4,10],[1,1,4,0,1,5,6]]
---- correct output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
---- user output:
[34 28 20 31]
-- TEST CASE 3:
---- input:
[[0,3,1,8,4,1,3],[3,6,0,4,4,9,7],[10,10,1,8,1,2,3],[3,2,5,2,7,0,2],[0,5,6,9,3,6,3],[8,2,9,8,7,9,4],[10,10,5,1,5,2,4],[7,1,8,4,8,7,0],[9,6,4,2,6,4,9],[5,1,6,10,4,6,4],[9,10,2,2,3,5,1],[6,5,9,3,5,7,5],[9,8,1,7,7,6,2],[2,7,5,8,8,5,5],[8,2,1,2,9,7,6],[1,2,9,5,8,3,10],[2,2,0,4,6,1,6],[6,7,4,1,5,3,2],[3,7,1,2,6,8,10],[0,2,5,3,7,1,6],[8,1,3,9,2,0,1],[4,8,3,5,10,8,8],[7,5,7,9,1,7,2],[2,9,8,4,2,0,8],[2,6,9,7,4,0,9],[3,9,0,4,1,1,0],[6,7,6,5,6,7,1]]
---- correct output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33 37
 18 38]
---- user output:
[34 28 20 31]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:28:49) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array([
	[2,4,3,4,5,8,8],
   [7,3,4,3,3,4,4],
   [3,3,4,3,3,2,2],
   [9,3,4,7,3,4,1]])
m = zeros(shape(v)[0], dtype=int)

for i in range(shape(v)[0]):
	m[i] = sum(v[i,:])
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:29:17) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array([
	[2,4,3,4,5,8,8],
   [7,3,4,3,3,4,4],
   [3,3,4,3,3,2,2],
   [9,3,4,7,3,4,1]])
m = zeros(shape(v)[0], dtype=int)

for i in range(shape(v)[0]):
	m[i] = sum(v[i,:])
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:29:26) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array([
	[2,4,3,4,5,8,8],
   [7,3,4,3,3,4,4],
   [3,3,4,3,3,2,2],
   [9,3,4,7,3,4,1]])
m = zeros(shape(v)[0], dtype=int)

for i in range(shape(v)[0]):
	m[i] = sum(v[i,:])
print(m)
-- EXECUTION TIME:
1.23674
-- TEST CASE 1:
---- input:
[[8,9,0,2,7,0,9],[6,1,9,10,10,5,0],[7,4,8,5,5,1,1],[4,5,6,10,4,5,5],[9,2,4,4,5,1,9],[0,1,4,9,5,8,8],[10,2,6,4,6,8,7],[2,10,7,2,10,7,5],[4,7,2,9,1,1,5],[0,5,6,2,3,7,4],[10,1,6,10,4,9,6],[7,10,6,1,2,2,4],[7,3,4,7,5,6,1],[0,2,3,10,1,6,10],[7,8,0,10,7,3,5],[2,3,2,3,0,3,6]]
---- correct output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
---- user output:
[34 28 20 31]
-- TEST CASE 2:
---- input:
[[3,9,2,0,7,2,3],[0,5,3,6,2,9,7],[9,3,5,10,7,0,8],[7,5,8,1,7,1,9],[5,4,4,5,0,8,6],[4,6,8,4,0,2,8],[9,9,4,10,3,2,2],[6,4,1,9,8,5,1],[8,0,3,1,9,8,1],[3,7,9,5,5,1,0],[2,1,0,5,7,7,3],[0,6,2,4,0,0,1],[3,8,5,1,9,2,10],[7,1,2,0,9,10,7],[8,2,10,7,5,1,10],[9,10,1,3,0,5,5],[0,10,3,7,3,9,8],[1,8,4,0,8,1,5],[0,7,2,3,1,6,8],[0,1,6,1,9,4,10],[1,1,4,0,1,5,6]]
---- correct output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
---- user output:
[34 28 20 31]
-- TEST CASE 3:
---- input:
[[0,3,1,8,4,1,3],[3,6,0,4,4,9,7],[10,10,1,8,1,2,3],[3,2,5,2,7,0,2],[0,5,6,9,3,6,3],[8,2,9,8,7,9,4],[10,10,5,1,5,2,4],[7,1,8,4,8,7,0],[9,6,4,2,6,4,9],[5,1,6,10,4,6,4],[9,10,2,2,3,5,1],[6,5,9,3,5,7,5],[9,8,1,7,7,6,2],[2,7,5,8,8,5,5],[8,2,1,2,9,7,6],[1,2,9,5,8,3,10],[2,2,0,4,6,1,6],[6,7,4,1,5,3,2],[3,7,1,2,6,8,10],[0,2,5,3,7,1,6],[8,1,3,9,2,0,1],[4,8,3,5,10,8,8],[7,5,7,9,1,7,2],[2,9,8,4,2,0,8],[2,6,9,7,4,0,9],[3,9,0,4,1,1,0],[6,7,6,5,6,7,1]]
---- correct output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33 37
 18 38]
---- user output:
[34 28 20 31]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:53:48) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array([
	[2,4,3,4,5,8,8],
   [7,3,4,3,3,4,4],
   [3,3,4,3,3,2,2],
   [9,3,4,7,3,4,1]])
m = zeros(shape(v)[0], dtype=int)

for i in range(shape(v)[0]):
	m[i] = sum(v[i,:])
print(m)
-- EXECUTION TIME:
1.12227
-- TEST CASE 1:
---- input:
[[8,9,0,2,7,0,9],[6,1,9,10,10,5,0],[7,4,8,5,5,1,1],[4,5,6,10,4,5,5],[9,2,4,4,5,1,9],[0,1,4,9,5,8,8],[10,2,6,4,6,8,7],[2,10,7,2,10,7,5],[4,7,2,9,1,1,5],[0,5,6,2,3,7,4],[10,1,6,10,4,9,6],[7,10,6,1,2,2,4],[7,3,4,7,5,6,1],[0,2,3,10,1,6,10],[7,8,0,10,7,3,5],[2,3,2,3,0,3,6]]
---- correct output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
---- user output:
[34 28 20 31]
-- TEST CASE 2:
---- input:
[[3,9,2,0,7,2,3],[0,5,3,6,2,9,7],[9,3,5,10,7,0,8],[7,5,8,1,7,1,9],[5,4,4,5,0,8,6],[4,6,8,4,0,2,8],[9,9,4,10,3,2,2],[6,4,1,9,8,5,1],[8,0,3,1,9,8,1],[3,7,9,5,5,1,0],[2,1,0,5,7,7,3],[0,6,2,4,0,0,1],[3,8,5,1,9,2,10],[7,1,2,0,9,10,7],[8,2,10,7,5,1,10],[9,10,1,3,0,5,5],[0,10,3,7,3,9,8],[1,8,4,0,8,1,5],[0,7,2,3,1,6,8],[0,1,6,1,9,4,10],[1,1,4,0,1,5,6]]
---- correct output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
---- user output:
[34 28 20 31]
-- TEST CASE 3:
---- input:
[[0,3,1,8,4,1,3],[3,6,0,4,4,9,7],[10,10,1,8,1,2,3],[3,2,5,2,7,0,2],[0,5,6,9,3,6,3],[8,2,9,8,7,9,4],[10,10,5,1,5,2,4],[7,1,8,4,8,7,0],[9,6,4,2,6,4,9],[5,1,6,10,4,6,4],[9,10,2,2,3,5,1],[6,5,9,3,5,7,5],[9,8,1,7,7,6,2],[2,7,5,8,8,5,5],[8,2,1,2,9,7,6],[1,2,9,5,8,3,10],[2,2,0,4,6,1,6],[6,7,4,1,5,3,2],[3,7,1,2,6,8,10],[0,2,5,3,7,1,6],[8,1,3,9,2,0,1],[4,8,3,5,10,8,8],[7,5,7,9,1,7,2],[2,9,8,4,2,0,8],[2,6,9,7,4,0,9],[3,9,0,4,1,1,0],[6,7,6,5,6,7,1]]
---- correct output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33 37
 18 38]
---- user output:
[34 28 20 31]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:44:39) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array([
	[2,4,3,4,5,8,8],
   [7,3,4,3,3,4,4],
   [3,3,4,3,3,2,2],
   [9,3,4,7,3,4,1]])
m = zeros(shape(v)[0], dtype=int)

for i in range(shape(v)[0]):
	m[i] = sum(v[i,:])
print(m)
-- EXECUTION TIME:
0.867007
-- TEST CASE 1:
---- input:
[[8,9,0,2,7,0,9],[6,1,9,10,10,5,0],[7,4,8,5,5,1,1],[4,5,6,10,4,5,5],[9,2,4,4,5,1,9],[0,1,4,9,5,8,8],[10,2,6,4,6,8,7],[2,10,7,2,10,7,5],[4,7,2,9,1,1,5],[0,5,6,2,3,7,4],[10,1,6,10,4,9,6],[7,10,6,1,2,2,4],[7,3,4,7,5,6,1],[0,2,3,10,1,6,10],[7,8,0,10,7,3,5],[2,3,2,3,0,3,6]]
---- correct output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
---- user output:
[34 28 20 31]
-- TEST CASE 2:
---- input:
[[3,9,2,0,7,2,3],[0,5,3,6,2,9,7],[9,3,5,10,7,0,8],[7,5,8,1,7,1,9],[5,4,4,5,0,8,6],[4,6,8,4,0,2,8],[9,9,4,10,3,2,2],[6,4,1,9,8,5,1],[8,0,3,1,9,8,1],[3,7,9,5,5,1,0],[2,1,0,5,7,7,3],[0,6,2,4,0,0,1],[3,8,5,1,9,2,10],[7,1,2,0,9,10,7],[8,2,10,7,5,1,10],[9,10,1,3,0,5,5],[0,10,3,7,3,9,8],[1,8,4,0,8,1,5],[0,7,2,3,1,6,8],[0,1,6,1,9,4,10],[1,1,4,0,1,5,6]]
---- correct output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
---- user output:
[34 28 20 31]
-- TEST CASE 3:
---- input:
[[0,3,1,8,4,1,3],[3,6,0,4,4,9,7],[10,10,1,8,1,2,3],[3,2,5,2,7,0,2],[0,5,6,9,3,6,3],[8,2,9,8,7,9,4],[10,10,5,1,5,2,4],[7,1,8,4,8,7,0],[9,6,4,2,6,4,9],[5,1,6,10,4,6,4],[9,10,2,2,3,5,1],[6,5,9,3,5,7,5],[9,8,1,7,7,6,2],[2,7,5,8,8,5,5],[8,2,1,2,9,7,6],[1,2,9,5,8,3,10],[2,2,0,4,6,1,6],[6,7,4,1,5,3,2],[3,7,1,2,6,8,10],[0,2,5,3,7,1,6],[8,1,3,9,2,0,1],[4,8,3,5,10,8,8],[7,5,7,9,1,7,2],[2,9,8,4,2,0,8],[2,6,9,7,4,0,9],[3,9,0,4,1,1,0],[6,7,6,5,6,7,1]]
---- correct output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33 37
 18 38]
---- user output:
[34 28 20 31]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:44:43) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array([
	[2,4,3,4,5,8,8],
   [7,3,4,3,3,4,4],
   [3,3,4,3,3,2,2],
   [9,3,4,7,3,4,1]])
m = zeros(shape(v)[0], dtype=int)

for i in range(shape(v)[0]):
	m[i] = sum(v[i,:])
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:46:33) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array([
	[2,4,3,4,5,8,8],
   [7,3,4,3,3,4,4],
   [3,3,4,3,3,2,2],
   [9,3,4,7,3,4,1]])
m = zeros(shape(v)[0], dtype=int)

for i in range(shape(v)[0]):
	m[i] = sum(v[i,:])
print(m)
-- EXECUTION TIME:
1.06997
-- TEST CASE 1:
---- input:
[[8,9,0,2,7,0,9],[6,1,9,10,10,5,0],[7,4,8,5,5,1,1],[4,5,6,10,4,5,5],[9,2,4,4,5,1,9],[0,1,4,9,5,8,8],[10,2,6,4,6,8,7],[2,10,7,2,10,7,5],[4,7,2,9,1,1,5],[0,5,6,2,3,7,4],[10,1,6,10,4,9,6],[7,10,6,1,2,2,4],[7,3,4,7,5,6,1],[0,2,3,10,1,6,10],[7,8,0,10,7,3,5],[2,3,2,3,0,3,6]]
---- correct output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
---- user output:
[34 28 20 31]
-- TEST CASE 2:
---- input:
[[3,9,2,0,7,2,3],[0,5,3,6,2,9,7],[9,3,5,10,7,0,8],[7,5,8,1,7,1,9],[5,4,4,5,0,8,6],[4,6,8,4,0,2,8],[9,9,4,10,3,2,2],[6,4,1,9,8,5,1],[8,0,3,1,9,8,1],[3,7,9,5,5,1,0],[2,1,0,5,7,7,3],[0,6,2,4,0,0,1],[3,8,5,1,9,2,10],[7,1,2,0,9,10,7],[8,2,10,7,5,1,10],[9,10,1,3,0,5,5],[0,10,3,7,3,9,8],[1,8,4,0,8,1,5],[0,7,2,3,1,6,8],[0,1,6,1,9,4,10],[1,1,4,0,1,5,6]]
---- correct output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
---- user output:
[34 28 20 31]
-- TEST CASE 3:
---- input:
[[0,3,1,8,4,1,3],[3,6,0,4,4,9,7],[10,10,1,8,1,2,3],[3,2,5,2,7,0,2],[0,5,6,9,3,6,3],[8,2,9,8,7,9,4],[10,10,5,1,5,2,4],[7,1,8,4,8,7,0],[9,6,4,2,6,4,9],[5,1,6,10,4,6,4],[9,10,2,2,3,5,1],[6,5,9,3,5,7,5],[9,8,1,7,7,6,2],[2,7,5,8,8,5,5],[8,2,1,2,9,7,6],[1,2,9,5,8,3,10],[2,2,0,4,6,1,6],[6,7,4,1,5,3,2],[3,7,1,2,6,8,10],[0,2,5,3,7,1,6],[8,1,3,9,2,0,1],[4,8,3,5,10,8,8],[7,5,7,9,1,7,2],[2,9,8,4,2,0,8],[2,6,9,7,4,0,9],[3,9,0,4,1,1,0],[6,7,6,5,6,7,1]]
---- correct output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33 37
 18 38]
---- user output:
[34 28 20 31]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:48:46) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array([
	[2,4,3,4,5,8,8],
   [7,3,4,3,3,4,4],
   [3,3,4,3,3,2,2],
   [9,3,4,7,3,4,1]])
m = zeros(shape(v)[0], dtype=int)

for i in range(shape(v)[0]):
	m[i] = sum(v[i,:])
print(m)
-- EXECUTION TIME:
0.883931
-- TEST CASE 1:
---- input:
[[8,9,0,2,7,0,9],[6,1,9,10,10,5,0],[7,4,8,5,5,1,1],[4,5,6,10,4,5,5],[9,2,4,4,5,1,9],[0,1,4,9,5,8,8],[10,2,6,4,6,8,7],[2,10,7,2,10,7,5],[4,7,2,9,1,1,5],[0,5,6,2,3,7,4],[10,1,6,10,4,9,6],[7,10,6,1,2,2,4],[7,3,4,7,5,6,1],[0,2,3,10,1,6,10],[7,8,0,10,7,3,5],[2,3,2,3,0,3,6]]
---- correct output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
---- user output:
[34 28 20 31]
-- TEST CASE 2:
---- input:
[[3,9,2,0,7,2,3],[0,5,3,6,2,9,7],[9,3,5,10,7,0,8],[7,5,8,1,7,1,9],[5,4,4,5,0,8,6],[4,6,8,4,0,2,8],[9,9,4,10,3,2,2],[6,4,1,9,8,5,1],[8,0,3,1,9,8,1],[3,7,9,5,5,1,0],[2,1,0,5,7,7,3],[0,6,2,4,0,0,1],[3,8,5,1,9,2,10],[7,1,2,0,9,10,7],[8,2,10,7,5,1,10],[9,10,1,3,0,5,5],[0,10,3,7,3,9,8],[1,8,4,0,8,1,5],[0,7,2,3,1,6,8],[0,1,6,1,9,4,10],[1,1,4,0,1,5,6]]
---- correct output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
---- user output:
[34 28 20 31]
-- TEST CASE 3:
---- input:
[[0,3,1,8,4,1,3],[3,6,0,4,4,9,7],[10,10,1,8,1,2,3],[3,2,5,2,7,0,2],[0,5,6,9,3,6,3],[8,2,9,8,7,9,4],[10,10,5,1,5,2,4],[7,1,8,4,8,7,0],[9,6,4,2,6,4,9],[5,1,6,10,4,6,4],[9,10,2,2,3,5,1],[6,5,9,3,5,7,5],[9,8,1,7,7,6,2],[2,7,5,8,8,5,5],[8,2,1,2,9,7,6],[1,2,9,5,8,3,10],[2,2,0,4,6,1,6],[6,7,4,1,5,3,2],[3,7,1,2,6,8,10],[0,2,5,3,7,1,6],[8,1,3,9,2,0,1],[4,8,3,5,10,8,8],[7,5,7,9,1,7,2],[2,9,8,4,2,0,8],[2,6,9,7,4,0,9],[3,9,0,4,1,1,0],[6,7,6,5,6,7,1]]
---- correct output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33 37
 18 38]
---- user output:
[34 28 20 31]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:48:46) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array([
	[2,4,3,4,5,8,8],
   [7,3,4,3,3,4,4],
   [3,3,4,3,3,2,2],
   [9,3,4,7,3,4,1]])
m = zeros(shape(v)[0], dtype=int)

for i in range(shape(v)[0]):
	m[i] = sum(v[i,:])
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:52:29) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("vv: "))
	
m = zeros(shape(v)[0], dtype=int)

for i in range(shape(v)[0]):
	m[i] = sum(v[i,:])
print(m)
-- EXECUTION TIME:
0.879242
-- ERROR:
  File "/home/codebench/codes/1836/1275/main.py", line 5
    m = zeros(shape(v)[0], dtype=int)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:52:33) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("vv: "))
	
m = zeros(shape(v)[0], dtype=int)

for i in range(shape(v)[0]):
	m[i] = sum(v[i,:])
print(m)
-- ERROR:
File "XXXX", line 5
    m = zeros(shape(v)[0], dtype=int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:53:12) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("vv: "))
n = shape(v)[0]
m = zeros(n, dtype=int)

for i in range(m):
	m[i] = sum(v[i,:])
print(m)
-- ERROR:
File "XXXX", line 4
    n = shape(v)[0]
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:53:29) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("vv: "))
m = shape(v)[0]
n = zeros(n, dtype=int)

for i in range(m):
	m[i] = sum(v[i,:])
print(m)
-- ERROR:
File "XXXX", line 4
    m = shape(v)[0]
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:53:48) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("vv: ")))
m = shape(v)[0]
n = zeros(n, dtype=int)

for i in range(m):
	m[i] = sum(v[i,:])
print(m)
-- EXECUTION TIME:
1.22457
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1275/main.py", line 5, in <module>
    n = zeros(n, dtype=int)
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:53:50) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("vv: ")))
m = shape(v)[0]
n = zeros(n, dtype=int)

for i in range(m):
	m[i] = sum(v[i,:])
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:53:54) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("vv: ")))
m = shape(v)[0]
n = zeros(n, dtype=int)

for i in range(m):
	m[i] = sum(v[i,:])
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:53:58) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("vv: ")))
m = shape(v)[0]
n = zeros(n, dtype=int)

for i in range(m):
	m[i] = sum(v[i,:])
print(m)
-- EXECUTION TIME:
0.846427
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1275/main.py", line 5, in <module>
    n = zeros(n, dtype=int)
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:54:34) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat = array(eval(input("vv: ")))
m = shape(v)[0]
t = zeros(n, dtype=int)

for i in range(m):
	t[i] = sum(mat[i,:])
print(t)
-- EXECUTION TIME:
1.03774
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1275/main.py", line 4, in <module>
    m = shape(v)[0]
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:54:39) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat = array(eval(input("vv: ")))
m = shape(v)[0]
t = zeros(n, dtype=int)

for i in range(m):
	t[i] = sum(mat[i,:])
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:54:58) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat = array(eval(input("vv: ")))
m = shape(v)[0]
q = zeros(n, dtype=int)

for i in range(m):
	q[i] = sum(mat[i,:])
print(q)
-- EXECUTION TIME:
1.09865
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1275/main.py", line 4, in <module>
    m = shape(v)[0]
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:55:19) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat = array(eval(input("vv: ")))
m = shape(mat)[0]
q = zeros(n, dtype=int)

for i in range(m):
	q[i] = sum(mat[i,:])
print(q)
-- EXECUTION TIME:
1.13033
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1275/main.py", line 5, in <module>
    q = zeros(n, dtype=int)
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:55:45) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat = array(eval(input("vv: ")))
m = shape(mat)[0]
q = zeros(m, dtype=int)

for i in range(m):
	q[i] = sum(mat[i,:])
print(q)
-- EXECUTION TIME:
1.2325
-- TEST CASE 1:
---- input:
[[8,9,0,2,7,0,9],[6,1,9,10,10,5,0],[7,4,8,5,5,1,1],[4,5,6,10,4,5,5],[9,2,4,4,5,1,9],[0,1,4,9,5,8,8],[10,2,6,4,6,8,7],[2,10,7,2,10,7,5],[4,7,2,9,1,1,5],[0,5,6,2,3,7,4],[10,1,6,10,4,9,6],[7,10,6,1,2,2,4],[7,3,4,7,5,6,1],[0,2,3,10,1,6,10],[7,8,0,10,7,3,5],[2,3,2,3,0,3,6]]
---- correct output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
---- user output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
-- TEST CASE 2:
---- input:
[[3,9,2,0,7,2,3],[0,5,3,6,2,9,7],[9,3,5,10,7,0,8],[7,5,8,1,7,1,9],[5,4,4,5,0,8,6],[4,6,8,4,0,2,8],[9,9,4,10,3,2,2],[6,4,1,9,8,5,1],[8,0,3,1,9,8,1],[3,7,9,5,5,1,0],[2,1,0,5,7,7,3],[0,6,2,4,0,0,1],[3,8,5,1,9,2,10],[7,1,2,0,9,10,7],[8,2,10,7,5,1,10],[9,10,1,3,0,5,5],[0,10,3,7,3,9,8],[1,8,4,0,8,1,5],[0,7,2,3,1,6,8],[0,1,6,1,9,4,10],[1,1,4,0,1,5,6]]
---- correct output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
---- user output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
-- TEST CASE 3:
---- input:
[[0,3,1,8,4,1,3],[3,6,0,4,4,9,7],[10,10,1,8,1,2,3],[3,2,5,2,7,0,2],[0,5,6,9,3,6,3],[8,2,9,8,7,9,4],[10,10,5,1,5,2,4],[7,1,8,4,8,7,0],[9,6,4,2,6,4,9],[5,1,6,10,4,6,4],[9,10,2,2,3,5,1],[6,5,9,3,5,7,5],[9,8,1,7,7,6,2],[2,7,5,8,8,5,5],[8,2,1,2,9,7,6],[1,2,9,5,8,3,10],[2,2,0,4,6,1,6],[6,7,4,1,5,3,2],[3,7,1,2,6,8,10],[0,2,5,3,7,1,6],[8,1,3,9,2,0,1],[4,8,3,5,10,8,8],[7,5,7,9,1,7,2],[2,9,8,4,2,0,8],[2,6,9,7,4,0,9],[3,9,0,4,1,1,0],[6,7,6,5,6,7,1]]
---- correct output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33 37
 18 38]
---- user output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33
 37 18 38]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
